Mon Jul 18 14:23:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2174_Regression/client.cpp:
          Don't print the transient exception, this is expected

        * tests/Bug_2174_Regression/server.cpp:
          Removed commented out code

Mon Jul 18 09:20:46 2005  Phil Mesnier  <mesnier_p@ociweb.com>

        * NEWS:
          Added notes about codeset refactoring.

Mon Jul 18 14:08:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Any_Impl.cpp:
          Fixed crash in Any cleanup

Mon Jul 18 15:05:03 2005  Boris Kolpackov  <boris@kolpackov.net>

	* orbsvcs/examples/Notify/Federation/Agent/Agent.cpp:
	* orbsvcs/examples/Notify/Federation/Gate/Gate.cpp:

	  Fixed a bunch of warnings.

Mon Jul 18 08:13:14 2005  Justin Michel  <michel_j@ociweb.com>

        * orbsvcs/orbsvcs/Notify/Admin.cpp:

          Attempt to fix compile errors on Irix resulting from partially
        defined types.

Mon Jul 18 05:15:49 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/Log/Hash_LogRecordStore.cpp:

          #include "ace/OS_NS_sys_time.h" to bring ACE_OS::gettimeofday()
          definition into scope for noinline builds.

        * orbsvcs/orbsvcs/Log/Hash_LogStore.cpp:

          #include "ace/Auto_Ptr.h" to bring auto_ptr<> template into
          scope for noinline builds.

        * orbsvcs/orbsvcs/Log/BasicLogFactory_i.cpp:
        * orbsvcs/orbsvcs/Log/EventLogFactory_i.cpp:
        * orbsvcs/orbsvcs/Log/NotifyLogFactory_i.cpp:
        * orbsvcs/orbsvcs/Log/RTEventLogFactory_i.cpp:

          #include "ace/OS_NS_stdio.h" to bring ACE_OS::sprintf()
          definition into scope for noinline builds.

Mon Jul 18 06:53:00 2005  Chad Elliott  <elliott_c@ociweb.com>

        * tao/PortableServer/RequestProcessingStrategyDefaultServant.cpp:

          Fixed a bug where using reference_to_servant() with the
          DefaultServant strategy incremented the reference count by two
          instead of one.
