@@ -280,8 +280,6 @@ TAO::TypeCode::Union<StringType,
 //   ACE_CHECK_RETURN (CORBA::TypeCode::_nil ());
 
   ACE_THROW_RETURN (CORBA::NO_IMPLEMENT (), CORBA::TypeCode::_nil ());
-
-  return CORBA::TypeCode::_nil ();
 }
 
 template <typename StringType,
